[Style] Fix footer social link not aligning center

--- a/styles/style.css
+++ b/styles/style.css
@@ -346,6 +346,8 @@ body {
 
 .footer__socials {
     display: flex;
+    align-self: flex-start;
+    align-items: center;
 }
 
 .footer__social {
